<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border_radius"
    android:padding="@dimen/container_padding_size"
    android:orientation="vertical">
    <LinearLayout
        android:padding="@dimen/container_padding_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_radius">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@drawable/border_radius"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/container_padding_size"
            android:layout_height="wrap_content">
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/big_avater_size"
                android:layout_height="@dimen/big_avater_size"
                android:src="@mipmap/icon_avater"
                android:id="@+id/user_avater"
                app:riv_oval="true" />
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/small_margin_size"
                android:layout_height="match_parent">
                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        style="@style/title_font_style"
                        android:id="@+id/username"/>
                    <TextView
                        android:id="@+id/sign"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/icon_edit"
                    android:src="@mipmap/icon_edit"
                    android:layout_width="@dimen/lg_img_size"
                    android:layout_height="@dimen/lg_img_size"/>
            </LinearLayout>

        </LinearLayout>
        <include layout="@layout/bottom_border"/>
        <LinearLayout
            android:layout_marginTop="@dimen/container_padding_size"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/user_name_layout"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/container_padding_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_username"
                    style="@style/user_title"/>
                <TextView
                    android:id="@+id/user_m_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
            <include layout="@layout/bottom_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/container_padding_size"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/user_tel_layout"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/container_padding_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_tel"
                    style="@style/user_title"/>
                <TextView
                    android:id="@+id/user_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
            <include layout="@layout/bottom_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/container_padding_size"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/user_email_layout"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/container_padding_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_email"
                    style="@style/user_title"/>
                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
            <include layout="@layout/bottom_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/container_padding_size"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/user_birthday_layout"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/container_padding_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_birthday"
                    style="@style/user_title"/>
                <TextView
                    android:id="@+id/user_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
            <include layout="@layout/bottom_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/container_padding_size"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/user_sex_layout"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/container_padding_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_sex"
                    style="@style/user_title"/>
                <TextView
                    android:id="@+id/user_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
            <include layout="@layout/bottom_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/container_padding_size"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/user_sign_layout"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/container_padding_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_role"
                    style="@style/user_title"/>
                <TextView
                    android:id="@+id/user_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
            <include layout="@layout/bottom_border"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:outlineProvider="none"
        android:layout_marginTop="@dimen/container_padding_size"
        android:gravity="center"
        android:text="@string/user_logout"
        android:background="@drawable/btn_radius_red_decoration"
        android:id="@+id/user_logout"
        android:textColor="@color/background_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_btn_height"/>
</LinearLayout>